syntax = "proto3";
option java_multiple_files = true;

package org.salgar.camunda.customer.command;

import "google/protobuf/any.proto";

message CustomerCommand {
  string command = 1;
  map<string, google.protobuf.Any> payload = 2;
}

message SourceProcess {
  string sourceProcess = 1;
}