syntax = "proto3";
option java_multiple_files = true;

package org.salgar.camunda.inventory.response;

import "google/protobuf/any.proto";

message InventoryResponse {
  string response = 1;
  map<string, google.protobuf.Any> payload = 2;
}

message ProductReserved {
  bool product_reserved = 1;
}

message ProductReservationRevertSuccessful {
    bool product_reservation_revert_successful = 1;
}