syntax = "proto3";
option java_multiple_files = true;

package org.salgar.camunda.product.options.command;

import "google/protobuf/any.proto";

message ProductOptionsCommand {
  string command = 1;
  map<string, google.protobuf.Any> payload = 2;
}