syntax = "proto3";
option java_multiple_files = true;

package org.salgar.camunda.product.options.response;

import "google/protobuf/any.proto";

message ProductOptionsResponse {
  string response = 1;
  map<string, google.protobuf.Any> payload = 2;
}